--- a/app/src/main/res/layout/game_fragment.xml
+++ b/app/src/main/res/layout/game_fragment.xml
@@ -21,7 +21,7 @@
     <!--Bind view directly with ViewModel-->
     <data>
         <variable
-            name="GameViewModel"
+            name="gameViewModel"
             type="com.example.android.guesstheword.screens.game.GameViewModel" />
     </data>
 
@@ -105,7 +105,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:text="@string/skip"
-            android:onClick="@={() -> GameViewModel.onSkip()}"
+            android:onClick="@{() -> gameViewModel.onSkip()}"
             android:theme="@style/SkipButton"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/correct_button"
@@ -127,7 +127,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:text="@string/got_it"
-            android:onClick="@={() -> GameViewModel.onCorrect()}"
+            android:onClick="@{() -> gameViewModel.onCorrect()}"
             android:theme="@style/GoButton"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
