--- a/app/src/main/res/layout/game_fragment.xml
+++ b/app/src/main/res/layout/game_fragment.xml
@@ -77,6 +77,7 @@
             android:fontFamily="sans-serif"
             android:textColor="@color/grey_text_color"
             android:textSize="14sp"
+            android:text="@{gameViewModel.currentTimeString}"
             android:textStyle="normal"
             android:visibility="visible"
             app:layout_constraintBottom_toTopOf="@+id/score_text"
